# MetaPure

./: .gitignore  README.md  pyproject.toml
src/: clipboard_monitor.py  main.py  metadata_scrubber.py  notification.py  settings.py  tray_manager.py  ui.py
